# rag-evaluation-framework

./: .env.example  .gitignore  README.md  pyproject.toml
QA_testing_sets/: golden.json
api/: __init__.py  config_manager.py  main.py  server.py
api/routers/: __init__.py  config.py  datasets.py  eval_router.py  knowledge_base.py  prompts.py  query.py  system.py
default_datasets/example_knowledge_base/customer_analysis/: customer_demographics.txt
default_datasets/example_knowledge_base/earnings/: annual_report_2025.txt  q4_earnings_summary.txt
default_datasets/example_knowledge_base/policies/: expense_policy.txt
default_datasets/example_test_set/: Työpöytä – pikakuvake.lnk
eval/: __init__.py  dataset_loader.py  dataset_schema.py  judges.py  metrics.py  prompts.py  reporting.py  runner.py
knowledge_base/customer_analysis/: churn_analysis.txt
knowledge_base/earnings/: q1_earnings_summary.txt  q2_earnings_summary.txt  q3_earnings_summary.txt
knowledge_base/policies/: data_privacy_policy.txt  remote_work_policy.txt  security_policy.txt
knowledge_base/product/: product_faq.txt
prompts/: eval_prompts.json  rag_prompts.json
rag_app/: __init__.py  config.py  index.py  ingest.py  prompt_manager.py  prompts.py  rag.py  utils.py
rag_app/retrievers/: __init__.py  vector.py
scripts/: cli.py
ui/: __init__.py  api_client.py  streamlit_app.py  utils.py
ui/components/: __init__.py  config_page.py  datasets_page.py  evaluation_page.py  knowledge_base_page.py  prompts_page.py  query_page.py  reports_page.py
